Added Service and controller and solve frontend issue